--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -30,8 +30,12 @@ body {
   background-color: var(--v3-body-bg-color);
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial,
-    sans-serif;
+  /* 使用中文友好的字体栈，优先显示中文字体 */
+  font-family: "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /* 设置全局字体粗细，让文字更清晰 */
+  font-weight: 500;
+  /* 设置基础字体大小 */
+  font-size: 17px;
   @extend %scrollbar;
 }
 
