--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -44,7 +44,7 @@
   /** Hamburger 组件 */
   --v3-hamburger-text-color: var(--el-text-color-primary);
   /** RightPanel 组件  */
-  --v3-rightpanel-button-bg-color: #001428;
+  --v3-rightpanel-button-bg-color: var(--el-color-primary);
 }
 
 /** 内容区放大时，将不需要的组件隐藏 */
